--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=back-end
+spring.datasource.url=jdbc:mysql://localhost:3307/webbansach
+spring.datasource.username=root
+spring.datasource.password=
