--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/webbansach
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# Auto created database
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=updatemvn
 
