--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/webbansach
+spring.datasource.url=jdbc:mysql://localhost:3306/webbansach?createDatabaseIfNotExist=true
 server.port=8080
 spring.datasource.username=root
 spring.datasource.password=
@@ -9,4 +9,3 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto=updatemvn
-
