--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=
 
 # Auto created database
+#spring.data.rest.default-page-size=2147483647
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
