update UI book detail

--- a/font-end/package.json
+++ b/font-end/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@coreui/coreui": "^5.2.0",
+    "@coreui/coreui-pro": "^5.8.0",
     "@coreui/react": "^5.4.1",
+    "@coreui/react-pro": "^5.10.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
