--- a/font-end/package.json
+++ b/font-end/package.json
@@ -23,14 +23,17 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.3",
+    "bs5-lightbox": "^1.8.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.21.7"
   },
   "scripts": {
     "start": "react-scripts start",
