--- a/font-end/package.json
+++ b/font-end/package.json
@@ -24,6 +24,7 @@
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.3",
     "bs5-lightbox": "^1.8.3",
+    "jwt-decode": "^4.0.0",
     "primereact": "^10.8.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
